--- a/prepros-6.config
+++ b/prepros-6.config
@@ -32,12 +32,6 @@
   },
   "imports": [
     {
-      "path": "#source/scss/style.scss",
-      "imports": [
-        "#source/scss/nullstyle.scss"
-      ]
-    },
-    {
       "path": "#source/index.kit",
       "imports": [
         "#source/header.html",
@@ -46,7 +40,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
